# glitter

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  glitter.spec  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml  test.yml
docs/: README.zh-CN.md  roadmap-ideas.md  workflow-diagram.md
glitter/: __init__.py  __main__.py  cli.py  config.py  discovery.py  language.py  security.py  transfer.py  trust.py  ui.py  utils.py
tests/: test_cli_help_runs.py  test_security_encrypt_decrypt_consistency.py  test_transfer_roundtrip_file.py
tests/integration/: test_transfer_roundtrip_file.py
tests/unit/: test_app_module.py  test_cli_helpers.py  test_cli_prompts.py  test_cli_run_receive_unit.py  test_cli_utils.py  test_config_module.py  test_discovery_module.py  test_history_module.py  test_main_module.py  test_security_helpers.py  test_transfer_helpers.py  test_trust_store_module.py  test_ui_module.py  test_utils_module.py
